# meshgpt-pytorch

./: Makefile  docker-compose.yml  hello.py  pyproject.toml
meshgpt_pytorch/: attention_mixin.py  blocks.py  embedding_mixin.py  gateloop_layers.py  helpers.py  meshgpt_pytorch.py  quantizer_mixin.py
meshgpt_pytorch/tests/: test_resnet_block.py
